--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera vez</title>
+    <link rel="css/estilos.css" rel="stylesheet" type='text/css'>
+
 </head>
 
 <body>
     
+    <h1>Proyecto empresarial</h1>
+
 </body>
 </html>
